# legato

./: .gitignore  ADDITIONAL_PERMISSIONS  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.txt  Cargo.toml  README.md  diff.txt  flake.nix  package.json  pnpm-lock.yaml  result
benches/: multi_tap.rs
crates/: Cargo.toml  README.md  deny.toml  diff.txt  grammar.pest
crates/.cargo/: config.toml
crates/benches/: nodes.rs
crates/examples/: allpass.rs  control.rs  custom_lexicon.rs  delay.rs  external.rs  filter_bank.rs  fm.rs  grain.rs  karplus.rs  kitchen.rs  midi.rs  modtap.rs  oversampler.rs  poly.rs  sequencer.rs
crates/kernels/: modtap4.legato  noisy.legato
crates/legato-core/: Cargo.toml
crates/legato-core-two/: Cargo.toml
crates/legato-core-two/benches/: nodes.rs
crates/legato-core-two/examples/: delay.rs  fir.rs  sampler.rs  sine.rs  sweep.rs
crates/legato-core-two/src/: lib.rs
crates/legato-core-two/src/nodes/: mod.rs  ports.rs
crates/legato-core-two/src/nodes/audio/: delay.rs  fir.rs  mixdown.rs  mixer.rs  mod.rs  ops.rs  oversample.rs  sampler.rs  sine.rs  sweep.rs
crates/legato-core-two/src/runtime/: builder.rs  context.rs  graph.rs  lanes.rs  mod.rs  runtime.rs  work_buffer.rs
crates/legato-core-two/src/runtime/resources/: audio_sample.rs  delay_line.rs  mod.rs
crates/legato-core-two/src/utils/: bench_harness.rs  math.rs  mod.rs  ringbuffer.rs
crates/legato-core/benches/: nodes.rs
crates/legato-core/examples/: delay.rs  fir.rs  oversample.rs  sampler.rs  sine.rs  sweep.rs
crates/legato-core/src/: lib.rs
crates/legato-core/src/application/: mod.rs
crates/legato-core/src/engine/: audio_context.rs  buffer.rs  builder.rs  graph.rs  mod.rs  node.rs  port.rs  runtime.rs
crates/legato-core/src/engine/resources/: audio_sample.rs  mod.rs
crates/legato-core/src/nodes/: mod.rs
crates/legato-core/src/runtime/: builder.rs  context.rs  graph.rs  lanes.rs  mod.rs  runtime.rs  work_buffer.rs
crates/legato-core/src/utils/: bench_harness.rs  math.rs  ringbuffer.rs
crates/legato-dsl/: Cargo.toml
crates/legato-dsl/src/: ast.rs  grammar.pest  ir.rs  lib.rs
crates/legato-dsl/src/ir/: mod.rs  node_spec.rs  params.rs  registry.rs
crates/legato-dsl/tests/: ast.rs  parse_grammar.rs
crates/legato-macros/: Cargo.toml
crates/legato-macros/src/: lib.rs
crates/src/: ast.rs  builder.rs  builder2.rs  config.rs  connection.rs  context.rs  docs.rs  executor.rs  graph.rs  harness.rs  input.rs  interface.rs  ir.rs  kernel.rs  kernel_codegen.rs  kernel_emit.rs  kernel_plan.rs  lib.rs  lower.rs  math.rs  midi.rs  msg.rs  node.rs  out.rs  params.rs  parse.rs  parse_two.rs  persample.rs  pipes.rs  ports.rs  registry.rs  resources.rs  ring.rs  runtime.rs  sample.rs  simd.rs  spec.rs  window.rs
crates/src/dsl/: expand.rs  ir.rs  lower.rs  mod.rs  parse.rs  pipeline.rs  resolve.rs  spawn.rs
crates/src/nodes/: mod.rs
crates/src/nodes/audio/: adsr.rs  allpass.rs  comb.rs  delay.rs  external.rs  fir.rs  grain.rs  hadamard.rs  householder.rs  mixer.rs  mod.rs  nested.rs  noise.rs  onepole.rs  ops.rs  oversample.rs  pan.rs  plate.rs  sampler.rs  saw.rs  signal.rs  sine.rs  svf.rs  sweep.rs  tap.rs
crates/src/nodes/control/: map.rs  mod.rs  phasor.rs  sequencer.rs  signal.rs
crates/src/nodes/midi/: basic.rs  midi_sequencer.rs  mod.rs  sequencer.rs  voice.rs
crates/src/resources/: arena.rs  buffer.rs  delay.rs  input.rs  mod.rs  window.rs
crates/src/resources_two/: arena.rs  buffer.rs  builder.rs  delay.rs  mod.rs
crates/tests/: ast.rs  kernel_codegen.rs  kernel_e2e.rs  macro_node.rs  mod.rs  parse_grammar.rs  persample_equivalence.rs
(+158 files in other folders)
