[package]
name = "legato"
version = "0.0.5"
edition = "2024"

[workspace]
members = ["legato-core", "legato-dsl"]
resolver = "3"

[features]
default = ["core","dsl"]
full = ["default"]
core = ["dep:legato-core"]
dsl = ["dep:legato-dsl"]

[dependencies]
legato-core = { path = "legato-core", optional = true }
legato-dsl  = { path = "legato-dsl", optional = true }

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
