[package]
name = "legato"
version = "0.0.5"
edition = "2024"

[dependencies]
cpal = { version = "0.16.0", features = ["jack"] }
assert_no_alloc = "1.1.2"
portable-atomic = { version = "1.11.1", features = ["float"] }
arc-swap = "1.7.1"
slotmap = "1.0.7"
approx = "0.5.1"
hound = "3.5.1"
rand = "0.9.2"
indexmap = "2.12.0"
pest = "2.8.3"
pest_derive = "2.8.3"
heapless = "0.9.2"
atomic_float = "1.1.0"
midir = "0.10.3"
ringbuf = "0.4.8"
crossbeam = "0.8.4"
halfband = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "nodes"
harness = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
