[package]
name = "legato"
description = "Legato is a WIP audiograph and DSL for quickly developing audio applications"
version = "0.0.26"
edition = "2024"
repository="https://github.com/legato-dsp/legato"
license = "AGPL-3.0"

[dependencies]
assert_no_alloc = "1.1.2"
portable-atomic = { version = "1.11.1", features = ["float"] }
arc-swap = "1.7.1"
slotmap = "1.0.7"
approx = "0.5.1"
hound = "3.5.1"
rand = "0.9.2"
indexmap = "2.12.0"
atomic_float = "1.1.0"
midir = "0.10.3"
crossbeam = "0.8.4"
halfband = "0.2.0"
ariadne = "0.6.0"
chumsky = "0.12.0"
cpal = { version = "0.16.0", features = ["jack"] }
rtrb = "0.3.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "nodes"
harness = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
